--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,8 +4,8 @@
 @inproceedings{wu2025viscobenchmarkingfinegrainedcritique,
     abbr={CVPR 2025},
     title={VISCO: Benchmarking Fine-Grained Critique and Correction Towards Self-Improvement in Visual Reasoning},
-    author={Xueqing Wu and Yuheng Ding and Bingxuan Li and Pan Lu and Da Yin and Kai-Wei Chang and Nanyun Peng},
-    booktitle={CVPR 2025},
+    author={Xueqing Wu* and Yuheng Ding* and Bingxuan Li and Pan Lu and Da Yin and Kai-Wei Chang and Nanyun Peng},
+    booktitle={CVPR},
     year={2025},
     url={https://arxiv.org/pdf/2412.02172}, 
     website={https://visco-benchmark.github.io},
